--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | QR code component</title>
 
 </head>
 <body>
-
+  <div id="card">
+    <img src="images/image-qr-code.png" alt="qr-code" />
+    <h3 id="title">Improve your front-end skills by building projects</h3>
+    <p id="message">scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </div>
 </body>
 </html>
